--- a/qdarkstyle/style.qrc
+++ b/qdarkstyle/style.qrc
@@ -44,6 +44,7 @@
         <file>rc/web-link.png</file>
         <file>rc/antenna.png</file>
         <file>rc/logo.png</file>
+        <file>rc/server.png</file>
     </qresource>
     <qresource prefix="/qdarkstyle">
         <file>style.qss</file>
