--- a/serverwindow.ui
+++ b/serverwindow.ui
@@ -675,7 +675,8 @@ QComboBox
 }
 
 QPushButton:checked{
-    background-color: #76797C;
+	background-color: #3daee9;
+    /*background-color: #76797C;*/
     border-color: #6A6969;
 }
 
@@ -1539,6 +1540,12 @@ QDateEdit::down-arrow:focus
          <height>32</height>
         </size>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -1558,6 +1565,15 @@ QDateEdit::down-arrow:focus
          <width>32</width>
          <height>32</height>
         </size>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -1720,6 +1736,12 @@ QDateEdit::down-arrow:focus
        <property name="text">
         <string>升级</string>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -1850,6 +1872,18 @@ QDateEdit::down-arrow:focus
        <property name="insertPolicy">
         <enum>QComboBox::InsertAtTop</enum>
        </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
+       </property>
+       <property name="minimumContentsLength">
+        <number>0</number>
+       </property>
+       <property name="duplicatesEnabled">
+        <bool>false</bool>
+       </property>
+       <property name="frame">
+        <bool>false</bool>
+       </property>
        <item>
         <property name="text">
          <string>All Clients</string>
@@ -1925,6 +1959,9 @@ QDateEdit::down-arrow:focus
      <width>181</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>OpenHandCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
